gen/doubleclicksearch/v2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-doubleclicksearch2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/doubleclicksearch/v2/lib)
error[E0412]: cannot find type `ReportRow` in module `crate::schemas`
   --> gen/doubleclicksearch/v2/lib/src/lib.rs:303:46
    |
303 |         pub rows: Option<Vec<crate::schemas::ReportRow>>,
    |                                              ^^^^^^^^^ help: a struct with a similar name exists: `Report`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-doubleclicksearch2`.

To learn more, run the command again with --verbose.
